[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://pixelPlanets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/endGameUI.gd" type="Script" id=3]
[ext_resource path="res://fonts/endGameUI_logFont.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="endGameUI" type="Control"]
pause_mode = 2
modulate = Color( 0, 1, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_right = -20.0
margin_bottom = -40.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 984.0
margin_bottom = 276.0
mouse_filter = 2
size_flags_vertical = 3

[node name="LabelMain" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 984.0
margin_bottom = 83.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "End game text"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
margin_top = 142.0
margin_right = 984.0
margin_bottom = 276.0
mouse_filter = 2
size_flags_vertical = 3

[node name="button_quit" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 488.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="button_reload" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 496.0
margin_right = 984.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 984.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 4 )
custom_constants/table_vseparation = 9
custom_constants/table_hseparation = 48
tab_size = 1
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/button_quit" to="." method="_on_button_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/button_reload" to="." method="_on_button_reload_pressed"]
